fix: Aligning with mock-ups

--- a/elements/pfe-navigation/src/pfe-navigation-main.scss
+++ b/elements/pfe-navigation/src/pfe-navigation-main.scss
@@ -6,6 +6,10 @@
   width: 100%;
   height: 100%;
 }
+
+[hidden] {
+  display: none;
+}
   
 ::slotted(*) {
   margin: 0;
@@ -23,4 +27,8 @@
   @media screen and (min-width: pfe-breakpoint(xl)) {
     flex-flow: row nowrap;
   }
+}
+
+.pfe-navigation-main__desktop {
+  height: 100%;
 }
